# 2048

./: .gitignore  2048.cpp  2048_rp.cpp  CMakeLists.txt  readme.md
